2011-10-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* testsuite/TestOnlineModelBuilder.cpp: Using BOOST_TEST_MESSAGE instead
	of deprecated BOOST_MESSAGE (BOOST_MESSAGE no longer exists in boost trunk).
	* testsuite/TestEvalEndToEnd.cpp: Likewise.

2011-09-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/module-Even.mlp: Add different even encodings.
	* examples/module-Even2.mlp: Likewise.

2011-09-12  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/State.cpp: Fixing bug in changeState().
	* src/dlvhex/valgrinddlvhex.sh: Showing more backtrace levels.

2011-09-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/TestHexParserModule.cpp: Use MLPSyntaxChecker instead
	of ModuleSyntaxChecker.
	* testsuite/TestMLPSolver.cpp: Likewise.

2011-09-02  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/OrdinaryAtomTable.hpp: Freed OrdinaryAtomTable from Instantiation indexing.
	* include/dlvhex/Atoms.hpp: Likewise.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/MLPSolver.cpp: Likewise.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* include/dlvhex/MLPSyntaxChecker.hpp: Fixed problem posed by deleting ModuleSyntaxChecker.hpp.
	* src/dlvhex/MLPSyntaxChecker.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

	* include/dlvhex/ModuleSyntaxChecker.hpp: Separates ModuleSyntaxChecker.hpp into MLPSyntaxChekcer.hpp and MLPSyntaxChekcer.cpp.
	* include/dlvhex/MLPSyntaxChecker.hpp: Likewise.
	* include/dlvhex/Makefile.am: Likewise.
	* src/dlvhex/MLPSyntaxChecker.cpp: Likewise.
	* src/dlvhex/Makefile.am: Likewise.
	* testsuite/Makefile.am: Likewise.

2011-09-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/MLPSolver.cpp (printCallGraph): Fix clang FTBFS
	"variable length array of non-POD element type".

2011-09-01  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* examples/Makefile.am (EXTRA_DIST): Add missing examples.

	* include/dlvhex/Makefile.am (pkginclude_HEADERS): Add Module.hpp,