@@ -1,0 +1,4 @@
+a.
+b.
+c v d :- a.
+c v d :- a.
